--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,18 +2,18 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory
-        app:allowDividerBelow="true"
-        android:title="@string/pref_title"
-        android:summary="@string/listpref_summary">
+<!--    <PreferenceCategory-->
+<!--        app:allowDividerBelow="true">-->
 
         <ListPreference
             android:key="@string/url_pref"
+            android:title="@string/pref_title"
+            android:summary="@string/listpref_summary"
             android:entries="@array/JSON_URL_NAME"
             android:entryValues="@array/JSON_URL">
         </ListPreference>
 
-    </PreferenceCategory>
+<!--    </PreferenceCategory>-->
 
     <PreferenceCategory>
     </PreferenceCategory>
