--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,7 @@
         android:layout_weight="1"
         android:gravity="start"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_launcher_foreground"
+        android:src="@mipmap/ic_portrait_cat"
         tools:layout_editor_absoluteX="59dp"
         tools:layout_editor_absoluteY="-31dp" />
 
