Network check seems to work, need to update gui with better error messages, having some issues with textview position in coordinator layout, made text black

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:text="default text"
         android:textSize="50sp"
+        android:textColor="@color/black"
         android:visibility="visible"
         android:layout_gravity="center">
 
@@ -49,6 +50,7 @@
         android:layout_gravity="center_horizontal"
         android:text="This contains the status message"
         android:textSize="20sp"
+        android:textColor="@color/black"
         android:visibility="visible"
         app:layout_anchor="@id/statusCode"
         app:layout_anchorGravity="center_horizontal">
